okay, don't know how to do footer

--- a/index.html
+++ b/index.html
@@ -6,17 +6,33 @@
 <body>
 
     <header>
-        <h2>About</h2>
-        <h2>Store</h2>
-        <h2>Gmail</h2>
-        <h2>Images</h2>
+        <h2 class="about"> <a href="https://about.google/">About</a></h2>
+        <h2 class="store"> <a href="https://store.google.com/"">Store</a></h2>
+        <h2 class="gmail"> <a href="https://mail.google.com/""> Gmail</a></h2>
+        <h2 class="images"> <a href="https://images.google.com/"">Images</a></h2>
 
-        <img src="g-suite-grid-icon.png" alt="G-Suite Navigator" class="header-img">
-        <img src="user-icon.png" alt="User icon" class="header-img">
+        <img src="g-suite-grid-icon.png" alt="G-Suite Navigator" class="header-img grid-icon">
+        <img src="user-icon.png" alt="User icon" class="header-img user-icon">
     </header>
 
 
     <img src="google-logo.jpg" alt="Google Logo" class="logo">
+
+    <form>
+        <input type="text" id="fname" name="fname">
+    </form>
+
+    <button class="google-search">Google Search</button>
+    <button class="im-feeling-lucky">I'm Feeling Lucky</button>
+
+    <footer>
+        <h2 class="advertising">Advertising</h2>
+        <h2 class="business">Business</h2>
+        <h2 class="how-search-works">How Search Works</h2>
+        <h2 class="privacy">Privacy</h2>
+        <h2 class="terms">Terms</h2>
+        <h2 class="settings">Settings</h2>
+    </footer>
 
 </body>
 </html>
