updated heading, working on search functions

--- a/index.html
+++ b/index.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Google</title>
+        <title>Google</title>
 
-    <link rel="stylesheet" href="style.css">
-</head>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
+    <body>
 
-    <!-- Page Container -->
-    <div class="page">
+        <!-- Page Container -->
+        <div class="page">
 
-        <!-- Header -->
-        <div class="header">
-            <ul class="header-links">
-                <li class="link left-align"><a href="https://about.google/">About</a></li>
-                <li class ="link left-align"><a href="https://store.google.com/"">Store</a></li>
-                <li class="right-align"><img src="user-icon.png" alt="User icon" class="header-images user-icon"></li>
-                <li class="right-align"><img src="g-suite-grid-icon.png" alt="G-Suite Navigator" class="header-images grid-icon"></li>
-                <li class="link right-align"><a href="https://images.google.com/"">Images</a></li>
-                <li class="link right-align"><a href="https://mail.google.com/""> Gmail</a></li>
-            </ul>
+            <!-- Header -->
+            <div class="header">
+                <ul class="header-links">
+                    <li class="link left-align"><a href="https://about.google/">About</a></li>
+                    <li class ="link left-align"><a href="https://store.google.com/">Store</a></li>
+                    <li class="right-align"><img src="user-icon.png" alt="User icon" class="header-images user-icon"></li>
+                    <li class="right-align"><img src="g-suite-grid-icon.png" alt="G-Suite Navigator" class="header-images grid-icon"></li>
+                    <li class="link right-align"><a href="https://images.google.com/">Images</a></li>
+                    <li class="link right-align"><a href="https://mail.google.com/"> Gmail</a></li>
+                </ul>
+            </div>
+
+            <!-- Main -->
+            <div class="main">
+                <!-- Google Logo -->
+                <img src="google-logo.jpg" alt="Google Logo" class="google-logo">
+                
+                <!-- Search Bar -->
+                <div>
+                    <form class="search-bar">
+                        <input type="text" id="search" name="search">
+                      </form>
+                </div>
+
+                <!-- Buttons -->
+                <div>
+                    <button class="search-button">Google Search</button>
+                    <button class="search-button">I'm Feeling Lucky</button>
+                </div>
+            </div>
+
+
+            <!-- Footer -->
+            <div class="footer">
+                <ul class="footer-links">
+                    <li class="link left-align"><a href="https://ads.google.com/">Advertising</a></li>
+                    <li class ="link left-align"><a href="https://smallbusiness.withgoogle.com/">Business</a></li>
+                    <li class="link left-align"><a href="https://www.google.com/search/howsearchworks/">How Search Works</a></li>
+                    <li class="link right-align"><a href="https://www.google.com/preferences/">Settings</a></li>
+                    <li class="link right-align"><a href="https://policies.google.com/terms/">Terms</a></li>
+                    <li class="link right-align"><a href="http://policies.google.com/privacy/"> Privacy</a></li>
+                </ul>
+            </div>
         </div>
 
-        <!-- Google Logo -->
-        <div class="google-logo">
-            <img src="google-logo.jpg" alt="Google Logo">
-        </div>
-
-        <!-- Search Bar -->
-        <div class=search-bar">
-            <form>
-                <input type="text" id="fname" name="fname">
-            </form>
-        </div>
-
-        <!-- Buttons -->
-        <div class="search-buttons">
-            <button class="google-search">Google Search</button>
-            <button class="im-feeling-lucky">I'm Feeling Lucky</button>
-        </div>
-
-        <!-- Footer -->
-        <div class="footer">
-            <ul class="footer-links">
-                <li class="link left-link"><a href="https://ads.google.com/">Advertising</a></li>
-                <li class ="link left-link"><a href="https://smallbusiness.withgoogle.com/">Business</a></li>
-                <li class="link left-link"><a href="https://www.google.com/search/howsearchworks/">How Search Works</a></li>
-                <li class="link right-link"><a href="http://policies.google.com/privacy/"> Privacy</a></li>
-                <li class="link right-link"><a href="https://policies.google.com/terms/">Terms</a></li>
-                <li class="link right-link"><a href="https://www.google.com/preferences/">Settings</a></li>
-            </ul>
-        </div>
-</div>
-
-</body>
+    </body>
 </html>
