--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
             <!-- Main -->
             <div class="main">
                 <!-- Google Logo -->
-                <img src="google-logo.jpg" alt="Google Logo" class="google-logo">
+                <img src="google-logo.png" alt="Google Logo" class="google-logo">
                 
                 <!-- Search Bar -->
                 <div>
-                    <form class="search-bar">
-                        <input type="text" id="search" name="search">
-                      </form>
+                    <form>
+                        <input class="search-bar" type="text" id="search" name="search">
+                        <button type="button" class="mic-button"></button>
+                        <button type="button" class="mag-button"></button>
+                    </form>
                 </div>
 
                 <!-- Buttons -->
