--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
             <!-- Header -->
             <div class="header">
-                <ul class="header-links">
-                    <li class="link left-align"><a href="https://about.google/">About</a></li>
-                    <li class ="link left-align"><a href="https://store.google.com/">Store</a></li>
-                    <li class="right-align"><img src="user-icon.png" alt="User icon" class="header-images user-icon"></li>
-                    <li class="right-align"><img src="g-suite-grid-icon.png" alt="G-Suite Navigator" class="header-images grid-icon"></li>
-                    <li class="link right-align"><a href="https://images.google.com/">Images</a></li>
-                    <li class="link right-align"><a href="https://mail.google.com/"> Gmail</a></li>
+                <ul class="header-left">
+                    <li><a href="https://about.google/">About</a></li>
+                    <li><a href="https://store.google.com/">Store</a></li>
+                </ul>
+                <ul class="header-right">
+                    <li><a href="https://mail.google.com/"> Gmail</a></li>
+                    <li><a href="https://images.google.com/">Images</a></li>
+                    <li><img src="g-suite-grid-icon.png" alt="G-Suite Navigator" class="header-images grid-icon"></li>
+                    <li><img src="user-icon.png" alt="User icon" class="header-images user-icon"></li>
                 </ul>
             </div>
 
@@ -49,13 +51,15 @@
 
             <!-- Footer -->
             <div class="footer">
-                <ul class="footer-links">
-                    <li class="link left-align"><a href="https://ads.google.com/">Advertising</a></li>
-                    <li class ="link left-align"><a href="https://smallbusiness.withgoogle.com/">Business</a></li>
-                    <li class="link left-align"><a href="https://www.google.com/search/howsearchworks/">How Search Works</a></li>
-                    <li class="link right-align"><a href="https://www.google.com/preferences/">Settings</a></li>
-                    <li class="link right-align"><a href="https://policies.google.com/terms/">Terms</a></li>
-                    <li class="link right-align"><a href="http://policies.google.com/privacy/"> Privacy</a></li>
+                <ul class="footer-left">
+                    <li><a href="https://ads.google.com/">Advertising</a></li>
+                    <li><a href="https://smallbusiness.withgoogle.com/">Business</a></li>
+                    <li><a href="https://www.google.com/search/howsearchworks/">How Search Works</a></li>
+                </ul>
+                <ul class="footer-right">
+                    <li><a href="http://policies.google.com/privacy/"> Privacy</a></li>
+                    <li><a href="https://policies.google.com/terms/">Terms</a></li>
+                    <li><a href="https://www.google.com/preferences/">Settings</a></li>
                 </ul>
             </div>
         </div>
